crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__postcodes-and-gems.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "@Bg/@Eg gem markers, postcodes [+ code], freecodes [^ text]",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: bg_header, eg_header, postcode, freecode",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "morning play",
        "type": "begin_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "bch"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "good",
              "content": [
                {
                  "content": "good",
                  "type": "text"
                }
              ],
              "raw_text": "good",
              "type": "word"
            },
            {
              "cleaned_text": "morning",
              "content": [
                {
                  "content": "morning",
                  "type": "text"
                }
              ],
              "raw_text": "morning",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "text": "yawning",
              "type": "freecode"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "cereal",
              "content": [
                {
                  "content": "cereal",
                  "type": "text"
                }
              ],
              "raw_text": "cereal",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "kind",
              "content": [
                {
                  "content": "kind",
                  "type": "text"
                }
              ],
              "raw_text": "kind",
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "ask"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "chocolate",
              "content": [
                {
                  "content": "chocolate",
                  "type": "text"
                }
              ],
              "raw_text": "chocolate",
              "type": "word"
            },
            {
              "cleaned_text": "ones",
              "content": [
                {
                  "content": "ones",
                  "type": "text"
                }
              ],
              "raw_text": "ones",
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "pref"
            },
            {
              "text": "food"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": "morning play",
        "type": "end_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "reading time",
        "type": "begin_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "let",
              "content": [
                {
                  "content": "let",
                  "type": "text"
                }
              ],
              "raw_text": "let",
              "type": "word"
            },
            {
              "cleaned_text": "us",
              "content": [
                {
                  "content": "us",
                  "type": "text"
                }
              ],
              "raw_text": "us",
              "type": "word"
            },
            {
              "cleaned_text": "read",
              "content": [
                {
                  "content": "read",
                  "type": "text"
                }
              ],
              "raw_text": "read",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "book",
              "content": [
                {
                  "content": "book",
                  "type": "text"
                }
              ],
              "raw_text": "book",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "text": "pointing",
              "type": "freecode"
            },
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            },
            {
              "cleaned_text": "one",
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "bch"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "like",
              "content": [
                {
                  "content": "like",
                  "type": "text"
                }
              ],
              "raw_text": "like",
              "type": "word"
            },
            {
              "text": "emphasis",
              "type": "freecode"
            },
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            },
            {
              "cleaned_text": "story",
              "content": [
                {
                  "content": "story",
                  "type": "text"
                }
              ],
              "raw_text": "story",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": "reading time",
        "type": "end_gem"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
