crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__prosodies.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "zho",
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "zho, eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "zho, eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "prosodies",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 190,
                "start": 189
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 193,
                      "start": 192
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "a:",
              "span": {
                "end": 193,
                "start": 191
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 196,
                      "start": 195
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "raw_text": "a:b",
              "span": {
                "end": 197,
                "start": 194
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 200,
                      "start": 199
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "b",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 202,
                      "start": 201
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "a:b:",
              "span": {
                "end": 202,
                "start": 198
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 205,
                      "start": 204
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "b",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 207,
                      "start": 206
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "c",
                  "type": "text"
                }
              ],
              "raw_text": "a:b:c",
              "span": {
                "end": 208,
                "start": 203
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 211,
                      "start": 210
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "b",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 213,
                      "start": 212
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "3",
                  "type": "text"
                }
              ],
              "raw_text": "a:b:3",
              "span": {
                "end": 214,
                "start": 209
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 217,
                      "start": 216
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "span": {
                      "end": 218,
                      "start": 217
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "b",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 220,
                      "start": 219
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "span": {
                      "end": 221,
                      "start": 220
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "a::b::",
              "span": {
                "end": 221,
                "start": 215
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "c",
                  "type": "text"
                }
              ],
              "raw_text": "c",
              "span": {
                "end": 223,
                "start": 222
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "ik",
                        "type": "text"
                      }
                    ],
                    "raw_text": "ik",
                    "span": {
                      "end": 235,
                      "start": 233
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "heb",
                        "type": "text"
                      }
                    ],
                    "raw_text": "heb",
                    "span": {
                      "end": 239,
                      "start": 236
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "g",
                        "type": "text"
                      },
                      {
                        "content": {
                          "span": {
                            "end": 242,
                            "start": 241
                          }
                        },
                        "type": "lengthening"
                      },
                      {
                        "content": "epuzzeld",
                        "type": "text"
                      }
                    ],
                    "raw_text": "g:epuzzeld",
                    "span": {
                      "end": 250,
                      "start": 240
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "silly",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "zeg",
                  "type": "text"
                }
              ],
              "raw_text": "zeg",
              "span": {
                "end": 267,
                "start": 264
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "je",
                  "type": "text"
                }
              ],
              "raw_text": "je",
              "span": {
                "end": 270,
                "start": 268
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "dan",
                  "type": "text"
                }
              ],
              "raw_text": "dan",
              "span": {
                "end": 274,
                "start": 271
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "zho, eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "zho, eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
