crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__prosody-colons.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 156,
                      "start": 155
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "span": {
                      "end": 157,
                      "start": 156
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "n",
                  "type": "text"
                }
              ],
              "raw_text": "a::n",
              "span": {
                "end": 158,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 161,
                      "start": 160
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "b:",
              "span": {
                "end": 161,
                "start": 159
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "animal",
                  "type": "text"
                }
              ],
              "raw_text": "animal",
              "span": {
                "end": 168,
                "start": 162
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
